--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     >
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <title>Responsive</title>
+  <title>Proffesional Developers</title>
 </head>
 <body>
   <header id="header-nav">
